feat: #67 Created LoginUserDTO and ResponseUserLoginDTO for authentication flow. (#69)
